test/trivial/bradc/vardecls1a.good
Error: Variable 'x' used before defined (vardecls1a.chpl:9)
